# hubble-reference-silabs-ssv6-simple

./: .gitignore  app.c  hubble-sample.pintool  hubble-sample.slcp  hubble-sample.slpb  hubble-sample.slps  hubble_port.c  readme.md  sl_gatt_service_device_information_override.c
cmake_gcc/: CMakeLists.txt  CMakePresets.json
config/: pin_config.h  sl_clock_manager_oscillator_config.h
config/btconf/: slc_args.json
